[package]
name = "radarr-cli"
version = "0.1.0"
authors = ["Spike Grobstein <me@spike.cx>"]
edition = "2018"

[[bin]]
name = "radarr"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.89", features = ["derive"] }
clap = "2.33.0"
radarr = { git = "https://github.com/spikegrobstein/radarr-rs" }
